--- a/Modules/assessment/scss/components/_lists.scss
+++ b/Modules/assessment/scss/components/_lists.scss
@@ -1,6 +1,6 @@
 .carbon-report-wrapper {
 	.right-align-item-list {
-		margin-bottom: 8rem;
+		margin-bottom: 2rem;
 		margin-top: 2rem;
 
 		li {
@@ -15,6 +15,31 @@
 			clear: both;
 		}	
 	}
+
+	.indented-list {
+	  	margin-left: 30px;
+
+	    li {
+	      margin-bottom: 1.5em;
+	    }
+
+	    p:first-child {
+	      margin-left: 0;
+	    }
+
+
+	    .indented-list {
+	      margin-left: 30px;
+	        li {
+				margin-bottom: 0;
+				margin-left: 30px;
+	        }
+
+	        p {
+	        	margin-bottom: 0.5em;
+	        }
+	    }
+  	}
 
 	@media screen and (max-width: 675px) {
 		.right-align-item-list li {
